check.log
    Checking r2d2-bitnet v8.2.0 (/mnt/d/XXXX/R2D2/r2d2-bitnet)
    Checking r2d2-inference-cpu v8.2.0 (/mnt/d/XXXX/R2D2/r2d2-inference-cpu)
    Checking r2d2-cortex v8.2.0 (/mnt/d/XXXX/R2D2/r2d2-cortex)
    Checking r2d2-blackboard v8.2.0 (/mnt/d/XXXX/R2D2/r2d2-blackboard)
error[E0433]: failed to resolve: use of undeclared type `BitSelfAttention`
  --> r2d2-bitnet/src/model.rs:68:29
   |
68 |             let attention = BitSelfAttention::new(config.num_attention_heads, head_dim, q_proj, k_proj, v_proj, o_proj);
   |                             ^^^^^^^^^^^^^^^^ use of undeclared type `BitSelfAttention`
   |
help: consider importing this struct through its public re-export
   |
 1 + use crate::BitSelfAttention;
   |

error[E0433]: failed to resolve: use of undeclared type `BitFFN`
  --> r2d2-bitnet/src/model.rs:77:23
   |
77 |             let ffn = BitFFN::new(gate_proj, up_proj, down_proj);
   |                       ^^^^^^ use of undeclared type `BitFFN`
   |
help: consider importing this struct through its public re-export
   |
 1 + use crate::BitFFN;
   |

For more information about this error, try `rustc --explain E0433`.
error: could not compile `r2d2-bitnet` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
